Remove deprecated usages